--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,7 @@
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 @import 'aos/dist/aos.css';
 @import 'glightbox/dist/css/glightbox.min.css';
-@import 'swiper/css';
-@import 'swiper/css/pagination';
+@import 'swiper/swiper-bundle.css';
 
 /* Font & Color Variables */
 :root {
